<resources>
    <string name="app_name">CloseApplication</string>
    <string name="btnclose">Close</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="btnCaptionSecond_activity">second_activity</string>
    <string name="btnCaptionFourth_activity">Fourth Activity</string>
    <string name="swap_clock">Swap Clock</string>
    <string name="buttonlogin">Login</string>
    <string name="eTextName">Name</string>
    <string name="tViewMessage">TextView</string>
    <string name="et_druga_aktywno">Uruchom Trzecią</string>
    <string name="btn_uruchom_trzeci">Uruchom Trzecią</string>
    <string name="et_uruchom_drug">Odpowiedź z Trzeciej</string>
    <string name="btn_uruchom_drug">Uruchom Drugą</string>
    <string name="btn_odpowied_do_drugiej">Odpowiedź do drugiej</string>
    <string name="textview">TextView</string>
    <string name="brt_uruchom_www">Uruchom WWW</string>
    <string name="btn_fourth_odswiez">Odśwież</string>
    <string name="et_CzasDzialaniaEtykieta">Czas Działania: </string>
    <string name="et_czas_dzialania_etykieta"></string>
    <string name="tv_wynik_etykieta">Wynik</string>
    <string name="btn_Uruchom">Uruchom</string>
    <string name="btn_uruchomPrzyciskOpis">Uruchom</string>
    <string name="title_activity_fiftth">fiftthActivity</string>
    <string name="adres">Adres:</string>
    <string name="name">URL</string>
    <string name="pobierz">Pobierz</string>
    <string name="btnFifthActivity">FIFTH ACTIVITY</string>
    <string name="title_activity_baza_danych">BazaDanych</string>
    <string name="btn_baza_danych">Baza Danych</string>
    <string name="title_activity_ustawienia">UstawieniaActivity</string>
</resources>
