<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.dragon.closeapplication.MainActivity">


    <Button
        android:text="@string/btnclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnCaptionSecond_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_secondActivity" />

    <Button
        android:text="@string/btnCaptionFourth_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/btn_fourthActivity"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eTextName"
        android:ems="10"
        android:layout_below="@+id/btn_secondActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/editTextName"
        android:inputType="textPersonName" />

    <Button
        android:text="@string/buttonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/et_CzasDzialaniaEtykieta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:id="@+id/tvCzasDzialaniaEtykieta" />

    <TextView
        android:text="@string/et_czas_dzialania_etykieta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvCzasDzialaniaEtykieta"
        android:layout_toEndOf="@+id/buttonLogin"
        android:id="@+id/czas_dzialania_etykieta"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin" />

    <TextView
        android:text="@string/tv_wynik_etykieta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/wynik_etykieta"
        android:layout_below="@+id/tvCzasDzialaniaEtykieta"
        android:layout_alignLeft="@+id/tvCzasDzialaniaEtykieta"
        android:layout_alignStart="@+id/tvCzasDzialaniaEtykieta" />

    <Button
        android:text="@string/btn_Uruchom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:id="@+id/uruchom_przycisk"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/wynik_etykieta"
        android:layout_alignStart="@+id/wynik_etykieta" />

    <Button
        android:text="@string/btnFifthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_fifthActivity"
        android:layout_below="@+id/btn_fourthActivity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btn_fourthActivity"
        android:layout_alignStart="@+id/btn_fourthActivity" />

    <Button
        android:text="@string/btn_baza_danych"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_bazaDanychActivity"
        android:layout_below="@+id/btn_fifthActivity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btn_fifthActivity"
        android:layout_alignStart="@+id/btn_fifthActivity" />


</RelativeLayout>
