<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dragon.closeapplication.thirdActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/et_uruchom_drug"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/etThirdMessage1"
        android:textAlignment="center" />

    <Button
        android:text="@string/btn_uruchom_drug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThirdRunSecondActivity"
        android:onClick="runSecondActivityMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />

    <Button
        android:text="@string/btn_odpowied_do_drugiej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThirdReturnResult"
        android:layout_below="@+id/etThirdMessage1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="returnToSecond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTthirdRunWWW"
        android:onClick="runWWW"
        android:layout_above="@+id/btnThirdRunSecondActivity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="40dp"
        android:text="@string/brt_uruchom_www" />
</RelativeLayout>
